[package]
name = "peek-save"
version = "0.1.0"
description = "A Tauri App for saving URLs with tags"
authors = ["dietrich"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "peek_save_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
regex = "1"
base64 = "0.22"

