[package]
name = "peek-tauri"
version = "0.1.0"
description = "Peek web user agent - Tauri backend"
authors = ["Dietrich Ayala"]
edition = "2021"

[lib]
name = "peek_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
url = "2"
mime_guess = "2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
